finish anniversary-merge fields-bom encode for csv  regex